fix(YSP-760): expose save button on inline block media edit
This displays the save button that is hidden by GinLb.  This makes me
wonder the implications or the reason why they chose to do this across
all dialogs, but it does work.  My real worry here is that users might
not realize when they change the image that it will change the image for
that media item--so they're not choosing a new image, they're replacing
the current image across the site.

It also does not update the sidebar since it doesn't refresh the page on
save.

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_themes/css/ys-themes.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_themes/css/ys-themes.css
@@ -1,3 +1,8 @@
+/* show media save button on ajax modal */
+#drupal-modal.media-library-edit__modal form > .form-actions {
+  display: flex;
+}
+
 .ys-layout-builder--drag-drop {
   border: 2px dashed var(--gin-pattern);
   position: absolute;
